# conformal

./: .dockerignore  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DEEP.md  Conformal.sln  DEMO.md  Dockerfile  FINDINGS-0.9.3.md  LICENSE  Makefile  README.md  TASK.md  analysis.py  ask  ast_printer.py  chat  conformal.py  matlab_parser.py  mmshape.py  pyproject.toml  run_all_tests.py  shapes.py
analysis/: __init__.py  analysis_core.py  analysis_ir.py  builtins.py  constraints.py  context.py  diagnostics.py  dim_extract.py  end_helpers.py  eval_binop.py  eval_builtins.py  eval_expr.py  func_analysis.py  intervals.py  matrix_literals.py  path_constraints.py  stmt_analysis.py  witness.py  workspace.py
docs/: AGENT-DESIGN-ANALYSIS.md  TOR.md  analysis.md  false-negative-policy.md  tests.md
frontend/: ir_json.py  lexer.py  lower_ir.py  matlab_parser.py  parse_fsharp.py  pipeline.py
fsharp/: AnalysisCore.fs  ConformalParse.fsproj  Constraints.fs  Context.fs  Diagnostics.fs  DimExtract.fs  Env.fs  EvalBuiltins.fs  EvalExpr.fs  Intervals.fs  Ir.fs  Json.fs  Lexer.fs  LspCodeActions.fs  LspDiagnostics.fs  LspHover.fs  Parser.fs  Program.fs  Shapes.fs  StmtFuncAnalysis.fs  SymDim.fs  TestRunner.fs  Witness.fs  Workspace.fs
ir/: __init__.py  ir.py
legacy/: analysis_legacy.py
lsp/: __main__.py  code_actions.py  diagnostics.py  hover.py  server.py  symbols.py
runtime/: env.py  shapes.py  symdim.py
scripts/: build-releases.sh  check-doc-numbers.sh  migrate-sweep.sh
site/: _headers  conformal_check.m  index.html  llms.txt  playground.html  (+4 more)
(+968 files in other folders)
