[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "conformal"
version = "1.0.0"
description = "Static shape and dimension analysis for MATLAB"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

[project.optional-dependencies]
lsp = ["pygls>=2.0,<3.0"]

[project.scripts]
conformal = "conformal:main"

[tool.setuptools]
py-modules = ["conformal", "run_all_tests"]

[tool.setuptools.packages.find]
include = ["analysis*", "runtime*", "frontend*", "ir*", "lsp*", "legacy*"]
